# W-Seminar

./: .gitignore  README.md  noxfile.py  pyproject.toml  ruff.toml  test.py
planck/: main.py
seminararbeit/: literatur.bib  main.tex
seminararbeit/chapters/: anhang.tex  einleitung.tex  fazit.tex  grundlagen.tex  molekülphysik.tex  treibhauseffekt.tex
simulationen/: __init__.py  formeln.py  utils.py
simulationen/co2_absorptionsgrad/: __main__.py
simulationen/co2_spektrum/: __main__.py
simulationen/co2_spektrum_under_1_5/: __main__.py
simulationen/co2_spektrum_v2_band/: __main__.py
simulationen/co2_spektrum_v3_band/: __main__.py
simulationen/co2_v2_schwingung/: __main__.py
simulationen/formeln/: __init__.py  formeln.py
simulationen/planck/: __main__.py
simulationen/wien/: __main__.py
