[project]
name = "w-seminar"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "nox>=2025.10.16",
]

[dependency-groups]
planck = [
    "matplotlib>=3.10.7",
    "scipy>=1.16.3",
]
co2 = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
]
co2absorption = [
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]
ruff = [
    "ruff>=0.14.4",
]
